k8s/base/excalibur-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalibur
  labels:
    app: excalibur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalibur
  template:
    metadata:
      labels:
        app: excalibur
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      containers:
        - name: excalibur
          image: excalibur:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-volume
              mountPath: /usr/src/app/static
            - name: media-volume
              mountPath: /usr/src/app/media
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
