k8s/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 5432
  selector:
    app: excalibur
    service: database
