k8s/base/excalibur-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalibur-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: excalibur.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalibur
                port:
                  number: 80
